# cdio-utils-rs

./: Cargo.toml  README.md
.githooks/: pre-commit
libcdio-cli/: Cargo.toml  README.md
libcdio-cli/src/: lib.rs
libcdio-cli/src/cd-drive/: cli.rs  main.rs
libcdio-cli/src/iso-info/: cli.rs  main.rs
libcdio-cli/src/iso-read/: cli.rs  main.rs
libcdio-cli/tests/: iso-info.rs  iso-read.rs
libcdio-rs/: Cargo.toml  README.md
libcdio-rs/src/: cdio.rs  device.rs  drive.rs  iso9660.rs  lib.rs  logging.rs  mmc.rs  udf.rs
libcdio-rs/src/iso9660/: ds.rs  entry.rs  rock.rs  stat.rs  util.rs  xa.rs
libcdio-rs/src/mmc/: get_config.rs  get_event_status.rs  read_subchannel.rs  read_toc.rs
libcdio-rs/src/udf/: entry.rs
test-data/: udf1.iso  xa.iso
