[package]
name = "libcdio-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "A collection of programs to work with CD/DVD media, ISO 9660 and UDF images"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
libcdio-rs = { path = "../libcdio-rs" }
tracing-subscriber = "0.3.23"

[[bin]]
name = "iso-info"
path = "src/iso-info/main.rs"
required-features = ["iso-info"]

[features]
default = ["iso-info"]
iso-info = ["libcdio-rs/iso9660", "libcdio-rs/udf"]
