[package]
name = "libcdio-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "A collection of programs to work with CD/DVD media, ISO 9660 and UDF images"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
libcdio-rs = { path = "../libcdio-rs" }
time = { workspace = true, features = ["formatting", "local-offset", "macros"], optional = true }
tracing-subscriber = "0.3.23"

# TODO: Remove the "-rs" suffixes before release
[[bin]]
name = "cd-drive-rs"
path = "src/cd-drive/main.rs"
required-features = ["cd-drive"]

[[bin]]
name = "iso-info-rs"
path = "src/iso-info/main.rs"
required-features = ["iso-info"]

[[bin]]
name = "iso-read-rs"
path = "src/iso-read/main.rs"
required-features = ["iso-read"]

[features]
default = ["cd-drive", "iso-info", "iso-read"]
cd-drive = []
iso-info = ["libcdio-rs/iso9660", "libcdio-rs/udf", "dep:time"]
iso-read = ["libcdio-rs/iso9660", "libcdio-rs/udf"]

[dev-dependencies]
assert_cmd = { version = "2.2.2", features = ["color"] }
assert_fs = { version = "1.1.4", features = ["color"] }
