[package]
name = "libcdio-rs"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
categories = ["api-bindings", "multimedia::audio", "filesystem", "hardware-support"]
description = "Safe abstraction library over libcdio"
keywords = ["cd", "scsi", "iso9660", "udf"]
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
iso9660 = ["libcdio-sys/iso9660"]

[dependencies]
bitflags = "2.11.1"
libcdio-sys.workspace = true
num_enum = "0.7.6"
tracing.workspace = true

[dev-dependencies]
test-log.workspace = true

[package.metadata.docs.rs]
all-features = true
